# melanoma_classification

./: README.md  accuracy_metric.py  app.py  create_batch.py  host.py  melanoma_model_training.ipynb  model.pkl  model.py  pyproject.toml  requirements.txt  train.py
.streamlit/: config.toml
model/: model.pt  model.py
training/: accuracy_metric.py  melanoma_model_training.ipynb  train.py
